feat: setup CI/CD pipeline for 2 VPS deployment
  - Add GitHub Actions workflows (CI and Deploy)
  - Configure Docker Compose for production with resource limits
  - Add nginx production config template for cross-VPS load balancing
  - Update deployment documentation with step-by-step guide
  - Configure monitoring dashboards for Prometheus and Grafana
  - Setup firewall rules and SSH keys for automated deployment

  VPS1 (45.14.194.8): Nginx, Proxy-1,2, Master-1,2, Replica-3, Prometheus
  VPS2 (91.230.110.139): Proxy-3, Master-3, Replica-1,2, Grafana, LokiÐ